@@ -1,4 +1,5 @@
 - Easier handling of aggregate structures with new ContextSocketAdapter
+- Easier handling of custom selection propagation with SelectionContainer
 
 :: 10.10
 - Avoid navigation to <null> values
